# AMLL-Editor

./: .gitignore  .prettierignore  .prettierrc.json  README.md  env.d.ts  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: build-desktop.yaml  deploy.yml  dispatch_beta.yml  dispatch_canary.yml
pipelines/coi/: plugin.ts
pipelines/iconSet/: plugin.ts
pipelines/iconify/: stylesheet.ts
pipelines/prosoticDictGen/: SUBTLEXus_syllables-corrected.txt
pipelines/splitDict/: SUBTLEXus_syllables-corrected.txt
pipelines/webManifest/: generate.ts  plugin.ts  source.json
public/: app.webmanifest
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: consoleArt.txt
src/components/audio/: Player.vue
src/components/dialogs/: BatchTimeShiftDialog.vue  FindReplaceDialog.vue
src/core/audio/: index.ts
src/core/compat/: index.ts
src/core/convert/: detect.ts  index.ts  manifest.json  paintext.ts  types.ts
src/core/file/: index.ts  project.ts  shared.ts  simple.ts  (+2 more)
src/i18n/: formatters.ts  i18n-types.ts  i18n-util.async.ts  i18n-util.sync.ts  i18n-util.ts  index.ts
src/port/: lrc.ts  qrc.ts  yrc.ts
src/stores/: core.ts  static.ts
src/styles/: common.scss
src/ui/: App.vue  common.scss
src/utils/: alignLineSylTime.ts  alignLineTime.ts  audio.ts  findReplace.ts  generateTooltip.ts  hotkey.ts  isInputEl.ts  provideListener.ts  selection.ts  tooltip.ts  tryRaf.ts  types.ts
(+153 files in other folders)
